"""DB tables create

Revision ID: 4988e0902a44
Revises: 
Create Date: 2023-09-07 21:39:40.243603

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '4988e0902a44'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('user',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=60), nullable=False),
    sa.Column('api_key', sa.String(length=60), nullable=True),
    sa.Column('password', sa.String(), nullable=True),
    sa.Column('avatar', sa.String(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_user')),
    sa.UniqueConstraint('name', name=op.f('uq_user_name'))
    )
    op.create_table('followers',
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('following_user_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['following_user_id'], ['user.id'], name=op.f('fk_followers_following_user_id_user')),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], name=op.f('fk_followers_user_id_user')),
    sa.PrimaryKeyConstraint('user_id', 'following_user_id', name=op.f('pk_followers'))
    )
    op.create_table('tweet',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('body', sa.String(length=280), nullable=False),
    sa.Column('num_likes', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], name=op.f('fk_tweet_user_id_user')),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_tweet'))
    )
    op.create_table('image',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('tweet_id', sa.Integer(), nullable=True),
    sa.Column('path', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['tweet_id'], ['tweet.id'], name=op.f('fk_image_tweet_id_tweet')),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_image'))
    )
    op.create_table('like',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('tweet_id', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['tweet_id'], ['tweet.id'], name=op.f('fk_like_tweet_id_tweet')),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], name=op.f('fk_like_user_id_user')),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_like'))
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('like')
    op.drop_table('image')
    op.drop_table('tweet')
    op.drop_table('followers')
    op.drop_table('user')
    # ### end Alembic commands ###
