// СВЯЗИ МЕЖДУ ТАБЛИЦАМИ
// Подписка между пользователями
Table follows {
  id integer [primary key]
  user_id integer [note: 'Кто подписан']
  following_user_id integer [note: 'На кого подписан']
  created_at timestamp
}

Ref: users.id < follows.following_user_id
Ref: users.id < follows.user_id


// Лайки для твитов
Table likes {
  id integer [primary key]
  user_id integer
  tweet_id integer
}

Ref: likes.user_id > users.id
Ref: likes.tweet_id > tweets.id


// Теги для твитов
Table tags_link {
  id integer [primary key]
  tags_id integer
  tweet_id integer
}

Ref: tags_link.tweet_id > tweets.id
Ref: tags_link.tags_id > tags.id


// ОСНОВНЫЕ ТАБЛИЦЫ
Table users {
  id integer [primary key]
  username varchar [note: 'Н-р, Cool Dev']
  nickname varchar [note: 'Н-р, @cooldev']
  avatar varchar [note: 'Аватарка']
  password varchar [note: 'Сохраняется хэш']
  created_at timestamp  [note: 'Дата регистрации']
}

Table tweets {
  id integer [primary key]
  body text [note: 'Тело сообщения (твит)']
  user_id integer [ref: > users.id]
  likes integer [note: 'Кол-во лайков']
  created_at timestamp
}

// Изображения к твитам
Table images {
  id integer [primary key]
  tweet_id int [ref: > tweets.id]
  path varchar [note: 'Путь до картинки']
}

// Теги для твитов
Table tags {
  id integer [primary key]
  name varchar [note: 'Теги для твитов']
}

Table comments {
  id integer [primary key]
  body text [note: 'Тело комментария']
  // Один к одному
  user_id integer [ref: > users.id]
  created_at timestamp
}